# GLProject

./: .gitignore  CMakeLists.txt  README.md
demo/: entry.cpp  helloworld.cpp  test.cpp
headers/: camera.h  filesystem.h  input_system.h  inputsystem.h  mesh.h  model.h  my_math.h  object.h  shader.h
shaders/fragment/: cartoon_3d.frag  simple_2d.frag  simple_3d.frag  smooth_3d.frag  texture_2d.frag  texture_3d.frag
shaders/vertex/: simple_2d.vert  simple_3d.vert  texture_3d.vert
src/: camera.cpp  glad.c  model.cpp  my_math.cpp  object.cpp  shader.cpp  stb_image_implementation.cpp
